# outsourcing-proposal-agent

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: scheduled-scrape.yml
backend/: .env.example  pyproject.toml
backend/config/: profile.yaml.example  settings.yaml.example
backend/scripts/: scheduled_scraper.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  base.py  boss.py  job_scoring.py  job_understanding.py  models.py  proposal_writing.py  quality_check.py
backend/src/analyzer/: __init__.py  job_priority.py
backend/src/api/: db.py  server.py
backend/src/api/routes/: __init__.py  analysis.py  github.py  jobs.py  pipeline.py  profile.py  proposals.py  scraper.py
backend/src/auth/: __init__.py  session.py
backend/src/config/: __init__.py  lancers_categories.py  loader.py  models.py
backend/src/db/: __init__.py  supabase_client.py
backend/src/generator/: __init__.py  prompts.py  proposal.py
backend/src/github/: __init__.py  client.py
backend/src/models/: __init__.py  config.py  errors.py  generation.py  github.py  job.py
backend/src/scrapers/: __init__.py  base.py  factory.py  lancers.py
backend/src/scrapers/lancers/: __init__.py  card_parser.py  constants.py  detail_parser.py  scraper.py  url_utils.py
backend/src/utils/: __init__.py  logger.py  storage.py  validators.py
docs/: 00-quick-reference.md  README.md
docs/api/: implementation.md  specs.md
docs/common/: design-system.md
docs/common/architecture/: overview.md
docs/common/requirements/: functional.md  non-functional.md
docs/common/specs/: cli.md  config.md  data-models.md  github.md
docs/dev/: coding-standards.md  getting-started.md  testing.md
docs/frontend/: implementation.md  layout-fixes.md  specs.md
docs/generator/: multi-agent-specs.md  prompts.md  specs.md
docs/guides/: faq.md  installation.md  troubleshooting.md
docs/legal/: scraping-policy.md  terms-of-use.md
docs/maintenance/: changelog.md  extension.md
docs/scraper/: implementation.md  specs.md
docs/scraper/research/lancers/: PAGE_STRUCTURE.md  README.md
docs/scraper/research/lancers/html/help/: guide_proposal.html  top.html
docs/scraper/research/lancers/html/job_detail/: sample.html
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/drafts/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/ongoing/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/submitted/: page.tsx
frontend/src/components/: job-card.tsx  job-detail-popover.tsx  job-filters.tsx  job-list.tsx  job-table.tsx  pipeline-layout.tsx  pipeline-sidebar.tsx  pipeline-summary.tsx  scraper-history.tsx  scraper-progress.tsx  scraper-settings.tsx  scraper-stats.tsx
frontend/src/components/job-data-table/: cell-components.tsx  column-visibility-menu.tsx  constants.ts  draggable-header.tsx  index.ts  job-columns.tsx  job-data-table.tsx  use-job-table-state.ts
frontend/src/components/settings/: automation-tab.tsx  data-management-tab.tsx  index.ts  profile-tab.tsx
frontend/src/hooks/: index.ts  use-ai-scoring.ts  use-jobs.ts  use-proposals.ts
frontend/src/lib/: api.ts  pipeline.ts
frontend/src/lib/api/: ai-scoring.ts  analysis.ts  base.ts  github.ts  index.ts  jobs.ts  pipeline.ts  profile.ts  proposals.ts  scraper.ts
frontend/src/types/: job.ts  profile.ts
scripts/: google_apps_script.js  start_servers.sh
supabase/: config.toml
supabase/migrations/: 2512190001_create_jobs_table.sql  2512200001_add_subcategory.sql  2512210001_create_user_profiles_table.sql  2512210002_create_pipeline_jobs_table.sql  2512210003_create_generated_proposals_table.sql  2512210004_create_ai_scores_table.sql
(+20 files in other folders)
